--- a/src/Components/Title/Title.css
+++ b/src/Components/Title/Title.css
@@ -1,5 +1,6 @@
 .compare-models-heading {
     font-size: 40px;
     font-weight: 200;
-    margin-top: 50px;
+    margin-top: 100px;
+    color: #393c41;
 }
