--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,11 +1,13 @@
 footer {
+    min-height: 70px;
     width: 100vw;
-    /* background-color: green; */
-    float: none;
     position: absolute;
     bottom: 0;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* left: 50%; */
+    /* transform: translate(-50%, -50%); */
     font-size: 12px;
     font-weight: 100;
 }
@@ -13,6 +15,7 @@ footer {
     display: flex;
     justify-content: center;
     list-style: none;
+    margin: 10px 0;
 }
 
 .footer-list li {
