--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -40,3 +40,18 @@
     text-decoration: none;
     color: #393c41;
 }
+
+.side-menu{
+    width: 110px;
+    height: 100vh;
+    position: fixed;
+    left: 0px;
+    border-left: 2px solid;
+    transition: .3s;
+    color: black;
+    background-color: blue;
+}
+
+.sld{
+    left: -115px;
+}
