--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -41,17 +41,30 @@
     color: #393c41;
 }
 
-.side-menu{
-    width: 110px;
-    height: 100vh;
+.menu-fixed {
     position: fixed;
-    left: 0px;
-    border-left: 2px solid;
-    transition: .3s;
-    color: black;
-    background-color: blue;
+    right: 10px;
+    z-index: 1
 }
 
+.top-corner-links {
+    padding-right: 50px;
+}
+
+.side-menu{
+    width: 300px;
+    height: 100vh;
+    position: fixed;
+    right: 0px;
+    border-left: 1px solid;
+    transition: .3s;
+    color: black;
+    background-color: white;
+}
+/* .side-menu {
+    position: fixed; 
+} */
+
 .sld{
-    left: -115px;
+    left: -310px;
 }
