--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -67,13 +67,14 @@
 
 .side-menu{
     width: 300px;
-    height: 100vh;
+    height: 1500px;
     position: fixed;
     right: 0px;
     border-left: 1px solid;
     transition: .3s;
     color: black;
-    background-color: white;
+    background-color: red;
+    z-index: 2;
 }
 /* .side-menu {
     position: fixed; 
