--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -65,9 +65,9 @@
     padding-right: 50px;
 }
 
-.side-menu{
+/* .side-menu{
     width: 300px;
-    height: 1500px;
+    height: 100vw;
     position: fixed;
     right: 0px;
     border-left: 1px solid;
@@ -75,9 +75,6 @@
     color: black;
     background-color: red;
     z-index: 2;
-}
-/* .side-menu {
-    position: fixed; 
 } */
 
 .sld{
