--- a/src/Components/SideMenu/SideMenu.css
+++ b/src/Components/SideMenu/SideMenu.css
@@ -1,4 +1,71 @@
+.side-menu{
+    width: 300px;
+    height: 100vh;
+    position: fixed;
+    right: 0px;
+    border-left: 1px solid;
+    transition: .3s;
+    color: black;
+    background-color: white;
+    z-index: 2;
+    overflow: auto;
+    /* will-change: scroll-position; */
+}
+
+.close-menu-section {
+    height: 80px;
+    width: 284px;
+    padding: 24px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    position: fixed;
+    z-index: 3;
+    background-color: white;
+}
+
+.close-icon {
+    height: 32px;
+    width: 32px;
+    transition: .5s;
+    border-radius: 50%;
+    cursor: pointer;
+
+}
+.close-icon:hover {
+    background-color: rgb(240, 240, 240);
+
+}
+
 .menu-list {
     display: flex;
     flex-direction: column;
+    padding: 4px 32px;
+    margin-top: 80px;
+    margin-bottom: 200px;
+
+
+}
+
+.menu-list li{
+    height: 32px;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    border-radius: 12px;
+    padding: 4px 8px;
+    margin: 0px 0px 8px;
+    transition: .7s;
+
+}
+
+.menu-list li:hover{
+    background-color: rgb(240, 240, 240);
+
+}
+
+.menu-list li a{
+    text-decoration: none;
+    color: black;
+
 }
